fix contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -126,7 +126,7 @@ nav ul li a {
   display: block;
   padding: 1.5rem 2vw;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #000000;
   font-size: 2.4rem;
   font-style: italic;
 }
@@ -158,7 +158,7 @@ nav ul.open {
     display: flex;
     left: 0%;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.929);
+    background-color: white;
     width: 100%;
     transition: 0.5s ;
 }
